# proto_library_in_subfolder

./: .gitignore  README.md  WORKSPACE
package_folder/: BUILD.bazel
